--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   </head>
     <body>
       <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - TRYBE</h1>   
+        <h1 id="titulo">Lições aprendidas - TRYBE</h1>
+        
+        <nav id="navigation">
+          <ul>
+            <li><a href="#">Página inicial</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
       </header>
 
       <section id="section-foto">
@@ -66,7 +74,7 @@
           </aside>
         </section>  
       </main>
-      
+
       <footer id="rodape">
         <p>Todos direitos reservados, Igor Machado</p>
         <a href="https://github.com/igormachado" target="_blank">Acesse meu <strong>Github</strong> para conhecer outros projetos</a>
