correçao quantidade de letras

--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
         <section>
             <article class="lado-esquerdo">
                 <h2 id="meu_aprendizado">Meu aprendizado</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat nisi voluptatibus at quasi qui laboriosam cum repellendus ratione obcaecati id voluptatem iste, ab odio fugiat, minima corrupti voluptatum, officiis incidunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae sed et sequi accusantium qui voluptate nam facere quaerat officiis. Ut fugit mollitia dolorem eligendi odio nemo accusantium non ipsam facilis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat nisi voluptatibus at quasi qui
+                    laboriosam cum repellendus ratione obcaecati id voluptatem iste, ab odio fugiat, minima corrupti
+                    voluptatum, officiis incidunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae sed
+                    et sequi accusantium qui voluptate nam facere quaerat officiis. Ut fugit mollitia dolorem eligendi
+                    odio nemo accusantium non ipsam facilis.</p>
             </article>
             <aside class="lado-direito">
                 <h2>Uma passagem sobre meu aprendizado</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus iusto a, nisi sunt in magnam laboriosam ipsa. Voluptatem reprehenderit sequi, laboriosam sunt ducimus suscipit minima. Nisi temporibus rem exercitationem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe necessitatibus iusto a, nisi sunt in
+                    magnam laboriosam ipsa. Voluptatem reprehenderit sequi, laboriosam sunt ducimus suscipit minima.</p>
             </aside>
         </section>
     </main>
