Adiciona novas estilizações e indentações

--- a/index.html
+++ b/index.html
@@ -17,59 +17,69 @@
     <section id="apresentacao">
       <img id="minha_foto" src="fernanda.jpeg" alt="Foto de Fernanda Cajueiro">
       <p id="nome">Fernanda Cajueiro Machado</p>
-      <nav><p id="links"><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p></nav>
+      <nav>
+        <p id="links"><a href="https://www.linkedin.com/in/fernandacajueiro/" target="_blank">LinkedIn</a> | <a href="https://github.com/fernandacajueiro" target="_blank">GitHub</a></p>
+      </nav>
     </section>
 
     <section id="aprendizados">
-      <h2 class="licoes">Lições aprendidas</h2>
-        <ol class="lado-esquerdo" id="licoes_aprendidas">
-          <li>Unix</li>
-          <li>Bash</li>
-          <li>Shell</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>GitHub Pages</li>
-          <li>Internet</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>HTML Semântico</li>
-        </ol>
+      <div id="licoes_aprendidas">
+        <h2 class="licoes">Lições aprendidas</h2>
+          <ol>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>GitHub Pages</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>HTML Semântico</li>
+          </ol>
+      </div>
 
-      <h2 class="licoes">Lições a aprender</h2>
-        <ul class="lado-direito" id="licoes_a_aprender">
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
-          <li>Metodologias Ágeis</li>
-          <li>SQL</li>
-          <li>Python</li>
-          <li>Unit Tests</li>
-          <li>DOM</li>
-          <li>Resposive CSS</li>
-          <li>Soft skills</li>
-        </ul>
+      <div id="licoes_a_aprender">
+        <h2 class="licoes">Lições a aprender</h2>
+          <ul>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Metodologias Ágeis</li>
+            <li>SQL</li>
+            <li>Python</li>
+            <li>Unit Tests</li>
+            <li>DOM</li>
+            <li>Resposive CSS</li>
+            <li>Soft skills</li>
+          </ul>
+      </div>
     </section>
 
-    <article class="lado-esquerdo" id="artigo">
-      <p>Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
-    </article>
+    <section id="texto">
+      <article class="lado-esquerdo" id="artigo">
+        <p>Já há alguns anos, tinha vontade de estudar e aprender mais sobre programação e desenvolvimento de software. Em novembro de 2019, descobri a Trybe por uma rede social e a vontade aumentou. Depois de alguns meses, só tive mais certeza de que queria mudar de carreira e começar a programar. Entrei na turma 9 da Trybe, iniciada em novembro de 2020, e desde então aprendi mais que em 1 ano de faculdade!</p>
+      </article>
 
-    <aside class="lado-direito" id="aside">
-      <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos.</p>
-    </aside>
+      <aside class="lado-direito" id="aside">
+        <p>Neste projeto, foi solicitado que um site fosse criado, contendo aplicações de todos os conteúdos aprendidos desde o início do curso, nos últimos três blocos.</p>
+      </aside>
+    </section>
 
-    <table>
-      <tr>
-        <th>Bloco 1</th>
-        <td>Unix, Bash e Shell Script</td>
-      </tr>
-      <tr>
-        <th>Bloco 2</th>
-        <td>Git, GitHub e Internet</td>
-      </tr>
-      <th>Bloco 3</th>
-      <td>Introdução a HTML e CSS</td>
-    </table>
+    <section>
+      <table>
+        <tr>
+          <th>Bloco 1</th>
+          <td>Unix, Bash e Shell Script</td>
+        </tr>
+        <tr>
+          <th>Bloco 2</th>
+          <td>Git, GitHub e Internet</td>
+        </tr>
+          <th>Bloco 3</th>
+          <td>Introdução a HTML e CSS</td>
+      </table>
+    </section>  
 
     <footer id="rodape">
       <p>Projeto desenvolvido por Fernanda Cajueiro durante o curso de desenvolvimento de software na Trybe, em novembro de 2020. Todos os direitos reservados.</p>
