--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
               
             </section>
 
-            <div>
+            <div id="lado_a_lado">
               <article id="artigo_principal">
-                <h4>Processo de aprendizado na <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao_2&utm_content=anuncio01&gclid=EAIaIQobChMIkv-L1Ymc7QIVUweRCh2ItQcGEAAYASAAEgKLUPD_BwE" target="blank">Trybe</a></h4>
+                <h4>Processo de aprendizado na <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao_2&utm_content=anuncio01&gclid=EAIaIQobChMIkv-L1Ymc7QIVUweRCh2ItQcGEAAYASAAEgKLUPD_BwE" target="_blank">Trybe</a></h4>
                 <p>Os desafios comecaram logo que tive que instalar o Linux na minha máquina. Ainda faltava uma semana para o inicio do curso, porém nao havia ninguem para me ajudar até entao. Nao dava tempo para se lamentar, entao entrei de cabeca na missao.</p>
                 <p>Foram inumeros problemas. Alguns ainda nao solucionados como a recuperacao dos meus arquivos de backup do Windows.</p>
                 <p>Continuação...</p>
