Corrige issue do Code Climate e requisitos obrigatórios alterados

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </section>
 
     <section id="aprendizados">
-      <div id="licoes_aprendidas">
+      <div id="licoes1">
         <h2 class="licoes">Lições aprendidas</h2>
-          <ol>
+          <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
             <li>Shell</li>
@@ -39,9 +39,9 @@
           </ol>
       </div>
 
-      <div id="licoes_a_aprender">
+      <div id="licoes2">
         <h2 class="licoes">Lições a aprender</h2>
-          <ul>
+          <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>React</li>
             <li>Node.js</li>
@@ -79,7 +79,7 @@
           <th>Bloco 3</th>
           <td>Introdução a HTML e CSS</td>
       </table>
-    </section>  
+    </section>
 
     <footer id="rodape">
       <p>Projeto desenvolvido por Fernanda Cajueiro durante o curso de desenvolvimento de software na Trybe, em novembro de 2020. Todos os direitos reservados.</p>
