Alterações de estilo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="aprendizados">
       <div id="licoes1">
-        <h2 class="licoes">Lições aprendidas</h2>
+        <h2 class="licoes">Lições aprendidas ✅</h2>
           <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Bash</li>
@@ -40,7 +40,7 @@
       </div>
 
       <div id="licoes2">
-        <h2 class="licoes">Lições a aprender</h2>
+        <h2 class="licoes">Lições a aprender ⏳</h2>
           <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>React</li>
