--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <header id="cabecalho">
         <h1 id="titulo">Título</h1>
     </header>
+    
     <img id="minha_foto" src="eu.jpeg" alt="Homem sorrindo.">
+    
+    <ol id="licoes_aprendidas">
+        <li>Unix & Bash.</li>
+        <li>Fundamentos do Desenvolvimento Web.</li>
+        <li>HTML.</li>
+        <li>CSS.</li>
+        <li>Inteligência emocional.</li>
+        <li>Empatia.</li>
+        <li>Trabalho em equipe.</li>
+        <li>Git.</li>
+        <li>Github.</li>
+        <li>JavaScript.</li>
+    </ol>
 </body>
 </html>
