--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
       <header id="cabecalho">
           <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
           <nav id="menu_link">
-              <a href="">Home</a>
-              <a href="">Login</a>
+              <a class="link_color" href="">Home</a>
+              <a class="link_color" href="">Login</a>
           </nav>
       </header>
       <img id="minha_foto" src="retrato1.png" alt="foto rafael azevedo"><br>
-      <a href="https://github.com/RafaelBiatoAzevedo" target="_blank">Rafael Azevedo</a>
-      <table>
-          <tr>
-              <td>
+      <h2 id="name">Rafael Azevedo</h2>
+      <div id="div_link">
+        <a id="link_github" href="https://github.com/RafaelBiatoAzevedo" target="_blank">GitHub</a>
+      </div>
+      <div id="table_list">
+          <table>
+            <tr>
+              <th>Lições Aprendidas</th>
+              <th>Lições a Aprender</th>
+            </tr>
+            <tr>
+              <td> 
                 <ol id="licoes_aprendidas">
                     <li>Unix</li>
                     <li>Git</li>
@@ -45,19 +53,21 @@
                     <li>SQL</li>
                 </ul>
               </td>
-          </tr>
-      </table>
+            </tr>
+        </table>
+      </div>
       <section>
         <article class="lado-esquerdo">
               <h2>Meu Aprendizado na Trybe</h2>
               <p>Reforçei tudo o sabia de linux, aprendi ferramentas ótimas de comunicação como Zomm e slack que irão me ajudar muito na minha caminhadada. Aprendi Git e GitHub para controlar o versionamento do meu código e por fim HTML para estruturar minhas páginas, CSS para estiliza-las e Semantic HTML para melhorar a navegabilidade e auxiliar a acessibilidade. </p>
         </article>
         <aside class="lado-direito">
+              <h2>Jornada</h2>
               <p>Comecei minha jornada em TI com 9 anos,com 17 anos fiz um courso técnico de manutenção e instalação de softwares.Aos 19 fiz gradução em Análise de Sistema na Puc-Campinas e atualmente em 2020 iniciei Desenvolvimento web na Trybe. VQV!</p>
         </aside>
       </section>
       <footer id="rodape">
-          <p>Todos direitos reservados, Rafael Azevedo</p>
+          <p id="p_footer">Todos direitos reservados, Rafael Azevedo</p>
       </footer>
   </body>
 </html>
