nome centralizado em baixo da imagem

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
                <li>Home</li>
                <li>Login</li>
                <li>Register</li>
-               <li>Alo</li>
+               <li>Projetos</li>
            </ul> 
         </nav>
     </header>
     <section id="Licoes">
         <img id="minha_foto" src="https://scontent.fcgh8-1.fna.fbcdn.net/v/t1.0-9/119194541_155698762852429_2997436748445837010_n.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeELK4nposWDEPJXaFR-D8FHYOli3vEdICtg6WLe8R0gK2gLZ1p2Xz92_BMo1lzUdBcJK76wW_DvasBFqRfVMatf&_nc_ohc=DTlbb1m83S0AX-RU9Os&_nc_ht=scontent.fcgh8-1.fna&oh=9817100404817d0f500bd264536b4dad&oe=5FE1B35C">
+        <div id="victor">
         <a href="https://www.linkedin.com/in/victor-ricco/" target="_blank"><p>Victor Ricco</p></a>
+        </div>
         <h2>Licoes</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
