--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Lições aprendidas - Trybe!
     </h1>
   </header>
-  <img id="minha_foto" src="/foto-perfil.jpeg" >
+  <img id="minha_foto" src="/foto-perfil.jpeg" alt="Fábio Venâncio de Almeida"/>
   <article id="lista-materias">
     <h1>Lições aprendidas</h1>
     <ol id="licoes_aprendidas">
