alinhando itens incompleto

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Inspect</li>
             <li>Semantic HTML</li>
         </ol>
-        <ul>
+        <ul id="licoes_a_aprender">
             <li>Javascript</li>
             <li>DOM</li>
             <li>Forms</li>
@@ -35,5 +35,6 @@
             <li>Node</li>
             <li>SQL</li>
         </ul>
+        <footer id="rodape"></footer>
     </body>
 </html>
