Criada lista de lições que desejo aprender.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
         <li>Github.</li>
         <li>JavaScript.</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>Reactjs.</li>
+        <li>Nodejs.</li>
+        <li>Flexbox.</li>
+        <li>Resposividade.</li>
+        <li>JavaScript avançado.</li>
+        <li>Redux.</li>
+        <li>Soft skills.</li>
+        <li>SQL.</li>
+        <li>MongoDB.</li>
+        <li>Python.</li>
+    </ul>    
 </body>
 </html>
