Criado elemento footer com id rodape.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <li>SQL.</li>
         <li>MongoDB.</li>
         <li>Python.</li>
-    </ul>    
+    </ul> 
+    
+  <footer id="rodape">Todos os direitos reservados.</footer>  
 </body>
 </html>
