Criado link externo.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li>Python.</li>
     </ul> 
     
+    <a href="" target="_blank">Contato</a>
   <footer id="rodape">Todos os direitos reservados.</footer>  
 </body>
 </html>
