--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
     <section>
       <aside>
-        <p>O primeiro projeto vimos o processo de validação, como ele é bem criterioso, precisamos treinar para conseguir resolver as pendências.</p>
+        <p>O primeiro projeto foi trabalhoso, devido aos critérios, precisamos treinar para conseguir resolver as pendências.</p>
       </aside>
     </section>
-    Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill, o programa inclui um atendimento com especialista na área da psicologia para os alunos melhorarem seu emocinal.
-
+    Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill.
+    O programa inclui um atendimento com especialista.
     O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
-    As matérias que virão são muito boas, vou deixar algumas aqui, JavaScript, Nodejs, Reacth,  além de softskill, princípio da ciencia da computação.
+    O conhecimento é todo aplicado para estarmos ligado ao futuro.
   </article>
   <table id="tabela">
     <tr>
