--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Victor Ricco</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -52,14 +52,32 @@
             </ul>
         </aside>
         </section>
-        <article id="meuAprendizado">
-            <h2>Meu Aprendizado</h2>
-            <p>O mundo não é um mar de rosas; é um lugar sujo, um lugar cruel, que não quer saber o quanto você é durão. 
-                Vai botar você de joelhos e você vai ficar de joelhos para sempre se você deixar. 
-                Você, eu, ninguém vai bater tão forte como a vida, mas não se trata de bater forte. 
-                Se trata de quanto você aguenta apanhar e seguir em frente, o quanto você é capaz de aguentar e continuar tentando. 
-                É assim que se consegue vencer.<br>
-                Agora se você sabe do teu valor, então vá atrás do que você merece...</p>
-        </article>
+        <div id="artigoPassagem">
+            <article id="meuAprendizado">
+                <h2>Meu Aprendizado</h2>
+                <p>O mundo não é um mar de rosas; é um lugar sujo, um lugar cruel, que não quer saber o quanto você é durão. 
+                    Vai botar você de joelhos e você vai ficar de joelhos para sempre se você deixar. 
+                    Você, eu, ninguém vai bater tão forte como a vida, mas não se trata de bater forte. 
+                    Se trata de quanto você aguenta apanhar e seguir em frente, o quanto você é capaz de aguentar e continuar tentando. 
+                    É assim que se consegue vencer.<br>
+                    Agora se você sabe do teu valor, então vá atrás do que você merece...</p>
+            </article>
+            <aside id="meuAprendizado">
+                <h2>Passagem do meu Aprendizado</h2>
+                <p>wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                    wataxi ua chin chin go nas tennandayo
+                </p>
+            </aside>
+        </div>
   </body>
 </html>
