refatorando 5 css e html

--- a/index.html
+++ b/index.html
@@ -19,73 +19,75 @@
   </header>
 
   <main id="content">
-
     <section class="imagem">
       <img id="minha_foto" src="./img1.jpg" alt="">
     </section>
-    <section class="container">
+    <section>
+      <section class="container">
 
-      <section class="container-aprendizados">
+        <section class="container-aprendizados">
 
-          <section class="lado-esquerdo">
-          <h2>Licoes aprendidas:</h2>
-          <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Html</li>
-            <li>Css</li>
-            <li>Internet</li>
-            <li>Semantica Html</li>
-            <li>Boas praticas</li>
-            <li>Soft Skill</li>
-          </ol>
+            <section class="lado-esquerdo">
+            <h2>Licoes aprendidas:</h2>
+            <ol id="licoes_aprendidas">
+              <li>Unix</li>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>Html</li>
+              <li>Css</li>
+              <li>Internet</li>
+              <li>Semantica Html</li>
+              <li>Boas praticas</li>
+              <li>Soft Skill</li>
+            </ol>
+          </section>
+
+          <section class="lado-direito">
+            <h2>Licoes a aprender:</h2>
+            <ul id="licoes_a_aprender">
+              <li>JavaScrit</li>
+              <li>FlexBoxCss</li>
+              <li>React</li>
+              <li>RTL</li>
+              <li>Metodologias Ageis</li>
+              <li>MongoDB</li>
+              <li>NodeJs</li>
+              <li>Arquiterura de Software</li>
+              <li>Python</li>
+              <li>Estrutura de Dados</li>
+            </ul>
+          </section>
         </section>
 
-        <section class="lado-direito">
-          <h2>Licoes a aprender:</h2>
-          <ul id="licoes_a_aprender">
-            <li>JavaScrit</li>
-            <li>FlexBoxCss</li>
-            <li>React</li>
-            <li>RTL</li>
-            <li>Metodologias Ageis</li>
-            <li>MongoDB</li>
-            <li>NodeJs</li>
-            <li>Arquiterura de Software</li>
-            <li>Python</li>
-            <li>Estrutura de Dados</li>
-          </ul>
+        <section class="artigos">
+
+          <article id="article">
+            <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
+          </article>
+
+          <aside id="aside">
+            <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
+          </aside>
+
         </section>
       </section>
-
-      <section class="artigos">
-
-        <article id="article">
-          <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
-        </article>
-
-        <aside id="aside">
-          <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
-        </aside>
-
+        <section id="table">
+          <table id="tabela">
+            <tr>
+              <td>Alguma coisa aqui dentro!</td>
+              <td>Alguma coisa aqui!</td>
+            </tr>
+            <tr>
+              <td>E outra coisa aqui!</td>
+              <td>Outra coisa aqui!</td>
+            </tr>
+          </table>
+        </section>
       </section>
-
-      <table id="tabela">
-        <tr>
-          <td>Alguma coisa aqui dentro!</td>
-          <td>Alguma coisa aqui!</td>
-        </tr>
-        <tr>
-          <td>E outra coisa aqui!</td>
-          <td>Outra coisa aqui!</td>
-        </tr>
-      </table>
-    </section>
   </main>
   <footer id="rodape">
-  <p><strong>Development by for Perycles R. Floriano.</strong> </p>
+    <p><strong>Development by for Perycles R. Floriano.</strong> </p>
   </footer>
 </body>
 </html>
