--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </h1>
   </header>
   <img id="minha_foto" src="/foto-perfil.jpeg" alt="Fábio Venâncio de Almeida"/>
-  <article id="lista-materias">
+  <div id="lista-materias">
     <h1>Lições aprendidas</h1>
     <ol id="licoes_aprendidas">
       <li>Empatia</li>
@@ -39,19 +39,18 @@
       <li>SQL</li>
       <li>MongoDB</li>
     </ul>
-  </article>
+  </div>
   <article div="aprendizado">
     Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
-    <section>
-      <aside>
-        <p>O primeiro projeto foi trabalhoso, devido aos critérios, precisamos treinar para conseguir resolver as pendências.</p>
-      </aside>
-    </section>
     Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill.
     O programa inclui um atendimento com especialista.
     O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
     O conhecimento é todo aplicado para estarmos ligado ao futuro.
-  </article>
+    <section>
+      <aside>
+        <p>O primeiro projeto foi trabalhoso, devido aos critérios, precisamos treinar para conseguir resolver as pendências.</p>
+      </aside>
+    </section>  </article>
   <table id="tabela">
     <tr>
       <th>Modulo</th>
