Ajustes na pagina, mudanca de fontes e adicao de icones3

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,12 +20,13 @@
             </ul>
         </nav>
     </header>
+    <img id="logoTrybe" src="trybeLogo.png" style="width:50px;height:50px">
     <article>
         <section>
 
         </section>
 
-        <section>
+        <section id="foto">
             <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
         </section>
 
@@ -70,7 +73,16 @@
             </section>
         </article>
         <footer id="rodape">
-            <p>Saiba mais sobre a <a href="https://betrybe.com" target="_blank">Trybe</a></p>
+            <h5>
+                <a href="#foto" title="Voltar ao topo"><img src="backTop.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+            </h5>
+
+            <h6>
+                <a href="mailto:bernardosmithstech@gmail.com" target="_blank" title="Enviar email"><img src="mail_send.svg" alt="email do Bernardo" style="width:50px;height:50px"></a>
+                <a href="https://www.instagram.com/bernardosmithjp/" target="_blank"><img src="Instagram.png" title="Visite nosso Instagram" alt="Instagram do Bernardo" style="width:48px;height:48px;"></a>
+                <a href="https://www.linkedin.com/in/bernardosmith/" target="_blank"><img src="linkedin.png" title="Visite nosso LinkedIn" style="width:60px;height:45px;" alt="LinkedIn do Bernardo"></a>
+            </h6>
+            <p>Todo o código foi utilizado com o conhecimento adquirido na <a href="https://betrybe.com" target="_blank">Trybe</a> ou no site <a href="https://w3schools.com">W3 Schools</a></p>
         </footer>
 </body>
 
