100% of the requirements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="menu1"><a href="#licoes_aprendidas">Lições aprendidas</a></div><br>
                 <span class="menu2"><a href="#licoes_a_aprender">Lições a aprender</a></span><br>
             </nav>
-            <h3 class="side-titles">Espírito de colaboração</h3>
+            <h3 class="side-titles">Colaboração</h3>
             <section class="side-article"><em>"A Trybe se preocupa com as Soft Skills e com eles estou evoluindo muito o meu espírito colaborativo."</em>
             </section>
         </aside>
