Em busca do 100%

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <li>MongoDB</li>
     </ul>
   </div>
-  <article div="aprendizado">
+  <article class="lado-esquerdo">
     Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
     Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill.
     O programa inclui um atendimento com especialista.
     O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
     O conhecimento é todo aplicado para estarmos ligado ao futuro.
-    <section>
+    <section class="lado-direito">
       <aside>
         <p>O primeiro projeto foi trabalhoso, devido aos critérios, precisamos treinar para conseguir resolver as pendências.</p>
       </aside>
