Criaçao e finalizaçao do footer+ z-index do header

--- a/index.html
+++ b/index.html
@@ -35,34 +35,37 @@
             <nav class="box-lista">
                 <h2 class="green-color">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas" class="list">
-                    <a href=""><li>Unix</li></a>
-                    <a href=""><li>Bash</li></a>
-                    <a href=""><li>Git</li></a>
-                    <a href=""><li>Github</li></a>
-                    <a href=""><li>Zoom</li></a>
-                    <a href=""><li>Internet</li></a>
-                    <a href=""><li>Html</li></a>
-                    <a href=""><li>Css</li></a>
-                    <a href=""><li>Empatia</li></a>
-                    <a href=""><li>Slack</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Unix"><li>Unix</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Bash"><li>Bash</li></a>
+                    <a href="https://www.atlassian.com/br/git/tutorials/what-is-git"><li>Git</li></a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-github/"><li>Github</li></a>
+                    <a href="https://edu.gcfglobal.org/pt/conhecendo-zoom/o-que-e-e-para-que-serve-o-zoom/1/"><li>Zoom</li></a>
+                    <a href="https://www.minhaconexao.com.br/blog/entenda-como-funciona-a-internet-que-chega-a-sua-casa/"><li>Internet</li></a>
+                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/"><li>Html</li></a>
+                    <a href="https://www.w3schools.com/css/"><li>Css</li></a>
+                    <a href="https://www.youtube.com/watch?v=VRXmsVF_QFY"><li>Empatia</li></a>
+                    <a href="https://slack.com/intl/pt-br/help/articles/115004071768-O-que-%C3%A9-o-Slack-"><li>Slack</li></a>
                 </ol>
             </nav>
             <nav class="box-lista">
                 <h2 class="gray-color">Lições a aprender</h2>
                 <ul id="licoes_a_aprender" class="list">
-                    <li><a href="">JavaScript</a></li>
-                    <li><a href="">NodeJs</a></li>
-                    <li><a href="">React</a></li>
-                    <li><a href="">Forms</a></li>
-                    <li><a href="">DOM</a></li>
-                    <li><a href="">SQL</a></li>
-                    <li><a href="">Express.js</a></li>
-                    <li><a href="">ES6</a></li>
-                    <li><a href="">Responsive</a></li>
-                    <li><a href="">Unit Test</a></li>
+                    <li><a href="#">JavaScript</a></li>
+                    <li><a href="#">NodeJs</a></li>
+                    <li><a href="#">React</a></li>
+                    <li><a href="#">Forms</a></li>
+                    <li><a href="#">DOM</a></li>
+                    <li><a href="#">SQL</a></li>
+                    <li><a href="#">Express.js</a></li>
+                    <li><a href="#">ES6</a></li>
+                    <li><a href="#">Responsive</a></li>
+                    <li><a href="#">Unit Test</a></li>
                 </ul>
             </nav>
         </section>
     </main>
+    <footer id="rodape">
+        <h3>Todos os direitos reservados - <span>Diogenes Santos</span></h3>
+    </footer>
 </body>
 </html>
