--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas</h1>
     </header>
+    <img src="jorge.jpg" alt="minha foto"  width="400px">
 
     
 </body>
