adicionado lista generica para editar mais tarde

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       <h1 id="titulo">Lições Aprendidas</h1>
     </header>
     <img src="jorge.jpg" alt="minha foto"  width="400px">
+    <ul>
+        <li>lição 01</li>
+        <li>lição 02</li>
+        <li>lição 03</li>
+        <li>lição 04</li>
+        <li>lição 05</li>
+    </ul>
 
     
 </body>
