--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 <body>
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas</h1>
+      <link rel="stylesheet" href="style.css">
     </header>
+    <nav>
+
+    </nav>
     <img src="jorge.jpg" alt="minha foto"  width="400px">
+    <section>
     <article >
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
 
         </p>
-
     </article>
+    </section>
     <ul id="licoes_aprendidas">
         <li>lição 01</li>
         <li>lição 02</li>
@@ -40,6 +45,8 @@
         <li>lição 04</li>
         <li>lição 05</li>
     </ul>
+   
+   
     <footer id="rodapé">Todos os direitos reservados Jorge Ramires</footer>
 
     
