corrigido alguns erros de portugues

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <nav>
 
     </nav>
-    <img src="jorge.jpg" alt="minha foto"  width="400px">
+    <div id ="minha_foto"><img src="jorge.jpg" alt="minha foto"  width="400px"></div>
     <section>
     <article >
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
 
         </p>
     </article>
+    <a href="https://www.uol.com.br/" target="_blank "> minha fonte de noticias preferida</a>
     </section>
-    <ul id="licoes_aprendidas">
+    <ul id= "licoes_aprendidas">
         <li>lição 01</li>
         <li>lição 02</li>
         <li>lição 03</li>
