--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
           <section id="apresentacao">
             <img src="foto.jpg"  id="minha_foto" alt="Foto de Raphael">
             <h2>Raphael Rêgo</h2>
-            <p>Estudant at Trybe</p>                        
+            <p>Estudant at Trybe</p>
+            <nav id="conteiner-icones">
+                <a href="https://www.linkedin.com/in/raphaelmlrego/" target="_blank"><img class="icones" src="linkedin.png" alt="linkedin icon"></a>
+              <a href="https://github.com/regoraphael" target="_blank"><img class="icones" src="github.png" alt="Github Icon"></a>
+            </nav>                     
         </section>
       </header>
       <main>
@@ -57,10 +61,7 @@
             
       </main>
       <footer id="rodape">
-          <nav>
-              <li><a href="https://www.linkedin.com/in/raphaelmlrego/" target="_blank">Likedin de Raphael</a></li>
-              <li><a href="https://github.com/regoraphael" target="_blank">GitHub de Raphael</a></li>
-          </nav>
+          <p>Todos os direitos reservados, Raphael.</p>
       </footer>
       
   </body>
