--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f4de205c5f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="cabecalho">
@@ -35,16 +36,16 @@
             <nav class="box-lista">
                 <h2 class="green-color">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas" class="list">
-                    <a href="https://pt.wikipedia.org/wiki/Unix"><li>Unix</li></a>
-                    <a href="https://pt.wikipedia.org/wiki/Bash"><li>Bash</li></a>
-                    <a href="https://www.atlassian.com/br/git/tutorials/what-is-git"><li>Git</li></a>
-                    <a href="https://www.hostinger.com.br/tutoriais/o-que-github/"><li>Github</li></a>
-                    <a href="https://edu.gcfglobal.org/pt/conhecendo-zoom/o-que-e-e-para-que-serve-o-zoom/1/"><li>Zoom</li></a>
-                    <a href="https://www.minhaconexao.com.br/blog/entenda-como-funciona-a-internet-que-chega-a-sua-casa/"><li>Internet</li></a>
-                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/"><li>Html</li></a>
-                    <a href="https://www.w3schools.com/css/"><li>Css</li></a>
-                    <a href="https://www.youtube.com/watch?v=VRXmsVF_QFY"><li>Empatia</li></a>
-                    <a href="https://slack.com/intl/pt-br/help/articles/115004071768-O-que-%C3%A9-o-Slack-"><li>Slack</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Unix" target="_blank"><li>Unix</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Bash" target="_blank"><li>Bash</li></a>
+                    <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank"><li>Git</li></a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-github/" target="_blank"><li>Github</li></a>
+                    <a href="https://edu.gcfglobal.org/pt/conhecendo-zoom/o-que-e-e-para-que-serve-o-zoom/1/" target="_blank"><li>Zoom</li></a>
+                    <a href="https://www.minhaconexao.com.br/blog/entenda-como-funciona-a-internet-que-chega-a-sua-casa/" target="_blank"><li>Internet</li></a>
+                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/" target="_blank"><li>Html</li></a>
+                    <a href="https://www.w3schools.com/css/" target="_blank"><li>Css</li></a>
+                    <a href="https://www.youtube.com/watch?v=VRXmsVF_QFY" target="_blank"><li>Empatia</li></a>
+                    <a href="https://slack.com/intl/pt-br/help/articles/115004071768-O-que-%C3%A9-o-Slack-" target="_blank"><li>Slack</li></a>
                 </ol>
             </nav>
             <nav class="box-lista">
@@ -63,9 +64,26 @@
                 </ul>
             </nav>
         </section>
+        <table id="tabela">
+            <tr>
+                <th colspan="6">O que estou ganhando aqui?</th>
+            </tr>
+            <tr>
+                <td>Amizades</td>
+                <td>Companherismo</td>
+                <td>Conhecimento</td>
+                <td>Humanidade</td>
+                <td>Autoestima</td>
+                <td>Profissionalismo</td>
+            </tr>
+        </table>
     </main>
     <footer id="rodape">
-        <h3>Todos os direitos reservados - <span>Diogenes Santos</span></h3>
+        <h3>Todos os direitos reservados - <span>Diogenes Santos</span> | </h3>
+        <nav class="redes-sociais">
+            <a href="https://www.linkedin.com/in/diogenessant/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/SantosDiv" target="_blank"><i class="fab fa-github"></i></a>
+        </nav>
     </footer>
 </body>
 </html>
