--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas</h1>
-      <link rel="stylesheet" href="style.css">
+         
     </header>
     <nav>
 
@@ -22,7 +23,7 @@
     </article>
     <a href="https://www.uol.com.br/" target="_blank "> minha fonte de noticias preferida</a>
     </section>
-    <ul id= "licoes_aprendidas">
+    <ol id="licoes_aprendidas">
         <li>lição 01</li>
         <li>lição 02</li>
         <li>lição 03</li>
